--- a/rebar.config
+++ b/rebar.config
@@ -11,13 +11,10 @@
         {lager, ".*", {git, "git://github.com/basho/lager", {tag, "1.2.2"}}},
         {getopt, ".*", {git, "git://github.com/jcomellas/getopt", {tag, "v0.4"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck"}},
-        {mapred_verify, ".*", {git, "git://github.com/basho/mapred_verify"}},
-        {riakc, ".*", {git, "git://github.com/basho/riak-erlang-client"}},
-        {riakhttpc, ".*", {git, "git://github.com/basho/riak-erlang-http-client"}},
         {kvc, "1.3.0", {git, "https://github.com/etrepum/kvc", {tag, "v1.3.0"}}}
        ]}.
 
-{escript_incl_apps, [lager, getopt, riakhttpc, riakc, ibrowse, mochiweb, kvc]}.
+{escript_incl_apps, [lager, getopt, kvc]}.
 {escript_emu_args, "%%! +K true +P 10000 -env ERL_MAX_PORTS 10000\n"}.
 {plugin_dir, "src"}.
 {plugins, [rebar_riak_test_plugin]}.
