--- a/rebar.config
+++ b/rebar.config
@@ -8,7 +8,7 @@
            warnings_as_errors, {parse_transform, lager_transform}]}.
 
 {deps, [
-        {lager, ".*", {git, "git://github.com/basho/lager", {tag, "1.2.2"}}},
+        {lager, ".*", {git, "git://github.com/basho/lager", {tag, "2.0.0rc2"}}},
         {getopt, ".*", {git, "git://github.com/jcomellas/getopt", {tag, "v0.4"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck"}},
         {kvc, "1.3.0", {git, "https://github.com/etrepum/kvc", {tag, "v1.3.0"}}}
