--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
-{require_otp_vsn, "R13B04|R14|R15"}.
+{require_otp_vsn, "R13B04|R14|R15|R16"}.
 {cover_enabled, true}.
 {edoc_opts, [{preprocess, true}]}.
 %%{edoc_opts, [{doclet, edown_doclet}, {pretty_printer, erl_pp}]}.
@@ -8,7 +8,7 @@
            warnings_as_errors, {parse_transform, lager_transform}]}.
 
 {deps, [
-        {lager, ".*", {git, "git://github.com/basho/lager", {tag, "2.0.0rc2"}}},
+        {lager, ".*", {git, "git://github.com/basho/lager", {tag, "2.0.0"}}},
         {getopt, ".*", {git, "git://github.com/jcomellas/getopt", {tag, "v0.4"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck"}},
         {kvc, "1.3.0", {git, "https://github.com/etrepum/kvc", {tag, "v1.3.0"}}}
